Show circular dependency

--- a/stories/Introduction.stories.mdx
+++ b/stories/Introduction.stories.mdx
@@ -8,6 +8,8 @@ import Plugin from './assets/plugin.svg';
 import Repo from './assets/repo.svg';
 import StackAlt from './assets/stackalt.svg';
 
+import { Button } from '@storybook/components'
+
 <Meta title="Example/Introduction" />
 
 <style>{`
@@ -73,7 +75,7 @@ import StackAlt from './assets/stackalt.svg';
     display: block;
     margin-bottom: 2px;
   }
-  
+
   .link-item img {
     height: 40px;
     width: 40px;
@@ -111,7 +113,7 @@ import StackAlt from './assets/stackalt.svg';
     display: inline-block;
   }
 
-  
+
 `}</style>
 
 # Welcome to Storybook
@@ -205,3 +207,5 @@ We recommend building UIs with a [**component-driven**](https://componentdriven.
   <span className="tip">Tip</span>Edit the Markdown in{' '}
   <code>src/storybook-examples/welcome.mdx</code>
 </div>
+
+<Button>Example</Button>
